theft alerts with recoveries graph

--- a/app/views/admin/theft_alerts/index.html.haml
+++ b/app/views/admin/theft_alerts/index.html.haml
@@ -6,18 +6,27 @@
       %li.nav-item
         = link_to "graph", admin_theft_alerts_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
 
-:ruby
-  theft_alert_plans = TheftAlertPlan.price_ordered_desc.select { |plan| matching_theft_alerts.where(theft_alert_plan: plan).any? }
-  theft_alerts_graph = theft_alert_plans.map do |theft_alert_plan|
-    {
-      name: theft_alert_plan.name,
-      data: time_range_counts(collection: matching_theft_alerts.where(theft_alert_plan_id: theft_alert_plan.id))
-    }
-  end
+- theft_alert_plans = TheftAlertPlan.price_ordered_desc.select { |plan| matching_theft_alerts.where(theft_alert_plan: plan).any? }
 
 - if @render_chart
+  :ruby
+    theft_alerts_graph = theft_alert_plans.map do |theft_alert_plan|
+      {
+        name: theft_alert_plan.name,
+        data: time_range_counts(collection: matching_theft_alerts.where(theft_alert_plan_id: theft_alert_plan.id))
+      }
+    end
+    stolen_records = StolenRecord.recovered.with_theft_alerts
+    alerts_recoveries_graph = theft_alert_plans.map do |theft_alert_plan|
+      {
+        name: "#{theft_alert_plan.name} recoveries",
+        data: time_range_counts(collection: stolen_records.where(theft_alerts: {theft_alert_plan_id: theft_alert_plan.id}), column: "theft_alerts.created_at")
+      }
+    end
   .col-12.mt-2
     = column_chart theft_alerts_graph, stacked: true, thousands: ",", defer: true
+  .col-12.mt-2
+    = column_chart alerts_recoveries_graph, stacked: true, thousands: ",", defer: true
 
 = render partial: "/shared/period_select"
 
