--- a/app/views/admin/theft_alerts/index.html.haml
+++ b/app/views/admin/theft_alerts/index.html.haml
@@ -9,6 +9,7 @@
         = link_to "graph", admin_theft_alerts_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
 
 - theft_alert_plans = TheftAlertPlan.price_ordered_desc.select { |plan| matching_theft_alerts.where(theft_alert_plan: plan).any? }
+- stolen_records = StolenRecord.recovered.with_theft_alerts.where(theft_alerts: {created_at: @time_range})
 
 - if @render_chart
   :ruby
@@ -18,7 +19,6 @@
         data: time_range_counts(collection: matching_theft_alerts.where(theft_alert_plan_id: theft_alert_plan.id))
       }
     end
-    stolen_records = StolenRecord.recovered.with_theft_alerts
     alerts_recoveries_graph = theft_alert_plans.map do |theft_alert_plan|
       {
         name: "#{theft_alert_plan.name} recoveries",
@@ -60,6 +60,11 @@
               - theft_alert_plans.each do |theft_alert_plan|
                 %td
                   = number_with_delimiter(matching_theft_alerts.where(theft_alert_plan: theft_alert_plan).count)
+                  %small
+                    %em.text-success
+                      recovered
+                    %span.less-strong
+                      = stolen_records.where(theft_alerts: {theft_alert_plan_id: theft_alert_plan.id}).count
 
 = render partial: "/admin/theft_alerts/table", locals: { render_sortable: true, theft_alerts: @theft_alerts }
 
