--- a/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
+++ b/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
@@ -95,3 +95,21 @@
     display: none !important;
   }
 }
+
+.map-wrapper {
+  position: relative;
+}
+#redo-search-in-map {
+  border-top-right-radius: 4px;
+  background: rgba(black, 0.6);
+  line-height: 1;
+  padding: 0.2rem 0.4rem;
+  box-shadow: 0 0 4px rgba(black, 0.1);
+  color: #fff;
+  position: absolute;
+  bottom: 0rem;
+  left: 0rem;
+  &:hover {
+    background: rgba(black, 0.9);
+  }
+}
