--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -11,7 +11,7 @@
     = link_to "New notification for unregistered bike", new_organization_bike_path(organization_id: current_organization, parking_notification: true), class: "btn btn-sm btn-outline-primary"
 
   .map-wrapper
-    #map{style: "margin-bottom: 12px;"}
+    #map
     %a#redo-search-in-map.currently-hidden{ href: "#" }
       redo search in current location
   .row.mb-2
