--- a/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
+++ b/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
@@ -95,3 +95,25 @@
     display: none !important;
   }
 }
+
+.map-wrapper {
+  position: relative;
+  #map {
+    margin-bottom: 12px;
+  }
+  #redo-search-in-map {
+    border-top-right-radius: 4px;
+    background: rgba(black, 0.7);
+    line-height: 1;
+    padding: 0.3rem 0.4rem 0.3rem;
+    box-shadow: 0 0 2px rgba(black, 0.1);
+    color: #fff;
+    position: absolute;
+    bottom: 0rem;
+    left: 0rem;
+    transition-duration: 0.3s;
+    &:hover {
+      background: rgba(black, 0.95);
+    }
+  }
+}
