--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -92,16 +92,36 @@
           retrieve/send repeat notification
   .row.mt-2.mb-4
     .col-sm-12
-      %a.dropdown-toggle.btn.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
-        #{@search_status.humanize} notifications
-      .dropdown-menu
-        - (ParkingNotification.statuses + ["all"]).each do |kind|
-          - if kind == "all" # Add a divider before all
+      %ul.nav.justify-content-cente
+        %li.nav-item
+          %a.dropdown-toggle.uncap.btn.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
+            #{@search_status.humanize} notifications
+          .dropdown-menu
+            - (ParkingNotification.statuses + ["all"]).each do |kind|
+              - if kind == "all" # Add a divider before all
+                .dropdown-divider
+              - kind_active = @search_status == kind
+              - kind_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_status: (kind_active ? nil : kind))
+              - kind_display = "#{kind.humanize} notifications"
+              = link_to kind_display, organization_parking_notifications_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
+        %li.nav-item
+          %a.dropdown-toggle.uncap.btn.btn-outline-secondary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
+            - if @search_unregistered == "not_unregistered"
+              Registered bikes only
+            - else
+              #{@search_unregistered.humanize} bikes
+          .dropdown-menu
+            - unregistered_all_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_unregistered: "all")
+            = link_to "All bikes", organization_parking_notifications_path(unregistered_all_link_params), class: "dropdown-item #{@search_unregistered == 'all' ? 'active' : ''}"
             .dropdown-divider
-          - kind_active = @search_status == kind
-          - kind_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_status: (kind_active ? nil : kind))
-          - kind_display = "#{kind.humanize} notifications"
-          = link_to kind_display, organization_parking_notifications_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
+            - unregistered_active = @search_unregistered == "only_unregistered"
+            - unregistered_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_unregistered: (unregistered_active ? nil : "only_unregistered"))
+            = link_to "Only unregistered bikes", organization_parking_notifications_path(unregistered_link_params), class: "dropdown-item #{unregistered_active ? 'active' : ''}"
+
+            - unregistered_not_active = @search_unregistered == "not_unregistered"
+            - unregistered_not_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_unregistered: (unregistered_not_active ? nil : "not_unregistered"))
+            = link_to "Registered bikes only", organization_parking_notifications_path(unregistered_not_link_params), class: "dropdown-item #{unregistered_not_active ? 'active' : ''}"
+
 
   - # Form needs to wrap the table too
 
