--- a/app/assets/stylesheets/revised/sections/legacy_content.scss
+++ b/app/assets/stylesheets/revised/sections/legacy_content.scss
@@ -48,7 +48,7 @@
     display: block;
     position: absolute;
     left: 0;
-    top: 0;
+    top: 0.4em;
     width: 0.4em;
     height: 0.4em;
     margin: 0.4em 0.3em 0 0;
