take care of a few more issues

--- a/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
+++ b/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
@@ -67,11 +67,10 @@
     border-radius: 1px;
     padding: 0.6rem;
   }
-
-  .nav-links {
-    li {
-      display: inline-block;
-    }
+}
+#parking-notification-nav-links {
+  li {
+    display: inline-block;
   }
 }
 
