--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -15,18 +15,25 @@
     - unless skip_map_cell
       %th.map-cell
     %th
-      = t(".created")
+      - if render_sortable
+        = sortable "created_at"
+      - else
+        = t(".created")
       %small.convertTimezone
     - unless skip_bike
       %th=t(".bike")
     - if render_address
       %th=t(".address")
-    %th Kind
+    %th
+      - if render_sortable
+        = sortable "kind"
+      - else
+        Kind
     %th
       =t(".by")
       - if render_sortable && params[:user_id].present?
         %small.less-strong
-          = link_to "view by all", organization_parking_notifications_path(sortable_search_params.merge(user_id: nil))
+          = link_to "view by all", organization_parking_notifications_path(sortable_search_params.merge(user_id: nil)), class: "linkWithSortableSearchParams", "data-urlparams" => "user_id,"
     - unless skip_repeat
       %th
         %small=t(".notification_number")
@@ -78,7 +85,7 @@
             = parking_notification.kind_humanized
         %td.hidden-sm-cells
           - if render_sortable && parking_notification.user.present?
-            = link_to parking_notification.user&.display_name&.truncate(20), organization_parking_notifications_path(sortable_search_params.merge(user_id: parking_notification.user_id))
+            = link_to parking_notification.user&.display_name&.truncate(20), organization_parking_notifications_path(sortable_search_params.merge(user_id: parking_notification.user_id)), class: "linkWithSortableSearchParams", "data-urlparams" => "user_id,#{parking_notification.user_id}"
           - else
             = parking_notification.user&.display_name&.truncate(20)
 
