--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -25,21 +25,34 @@
         total matches
         %em.maxNumberDisplayed.currently-hidden
           \- first #{@per_page} loaded
-          %small.em tighten search to view others
   .row.mt-2.mb-4
     .col-sm-12
-      %ul.nav.nav-links
+      %ul.nav#parking-notification-nav-links
         %li.nav-item
           %a.dropdown-toggle.uncap.btn.btn-sm.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
             #{@search_status.humanize} notifications
           .dropdown-menu
-            - (ParkingNotification.statuses + ["all"]).each do |kind|
-              - if kind == "all" # Add a divider before all
+            - (["all"] + ParkingNotification.statuses).each do |status|
+              - status_active = @search_status == status
+              - status_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_status: (status_active ? nil : status))
+              - status_display = "#{status.humanize} notifications"
+              = link_to status_display, organization_parking_notifications_path(status_link_params), class: "dropdown-item linkWithSortableSearchParams #{status_active ? 'active' : ''}", "data-urlparams" => "search_status,#{status}"
+              - if status == "all" # Add a divider after all
                 .dropdown-divider
-              - kind_active = @search_status == kind
-              - kind_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_status: (kind_active ? nil : kind))
-              - kind_display = "#{kind.humanize} notifications"
-              = link_to kind_display, organization_parking_notifications_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
+        %li.nav-item
+          - search_kind = ParkingNotification.kinds.include?(params[:search_kind]) ? params[:search_kind] : "all"
+          %a.dropdown-toggle.uncap.btn.btn-sm.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
+            = search_kind.humanize
+            - if search_kind == "all"
+              kinds
+          .dropdown-menu
+            - (["all"] + ParkingNotification.kinds).each do |kind|
+              - kind_active = params[:search_kind] == kind
+              - kind_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_kind: (kind_active ? nil : kind))
+              - kind_display = kind == "all" ? "All kinds" : "#{kind.humanize}"
+              = link_to kind_display, organization_parking_notifications_path(kind_link_params), class: "dropdown-item linkWithSortableSearchParams #{kind_active ? 'active' : ''}", "data-urlparams" => "search_kind,#{kind}"
+              - if kind == "all" # Add a divider after all
+                .dropdown-divider
         %li.nav-item
           %a.dropdown-toggle.uncap.btn.btn-sm.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
             - if @search_unregistered == "not_unregistered"
@@ -48,17 +61,17 @@
               #{@search_unregistered.humanize} bikes
           .dropdown-menu
             - unregistered_all_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_unregistered: "all")
-            = link_to "All bikes", organization_parking_notifications_path(unregistered_all_link_params), class: "dropdown-item #{@search_unregistered == 'all' ? 'active' : ''}"
+            = link_to "All bikes", organization_parking_notifications_path(unregistered_all_link_params), class: "dropdown-item linkWithSortableSearchParams #{@search_unregistered == 'all' ? 'active' : ''}", "data-urlparams" => "search_unregistered,all"
             .dropdown-divider
             - unregistered_active = @search_unregistered == "only_unregistered"
             - unregistered_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_unregistered: (unregistered_active ? nil : "only_unregistered"))
-            = link_to "Only unregistered bikes", organization_parking_notifications_path(unregistered_link_params), class: "dropdown-item #{unregistered_active ? 'active' : ''}"
+            = link_to "Only unregistered bikes", organization_parking_notifications_path(unregistered_link_params), class: "dropdown-item linkWithSortableSearchParams #{unregistered_active ? 'active' : ''}", "data-urlparams" => "search_unregistered,only_unregistered"
 
             - unregistered_not_active = @search_unregistered == "not_unregistered"
             - unregistered_not_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_unregistered: (unregistered_not_active ? nil : "not_unregistered"))
-            = link_to "Registered bikes only", organization_parking_notifications_path(unregistered_not_link_params), class: "dropdown-item #{unregistered_not_active ? 'active' : ''}"
+            = link_to "Registered bikes only", organization_parking_notifications_path(unregistered_not_link_params), class: "dropdown-item linkWithSortableSearchParams #{unregistered_not_active ? 'active' : ''}", "data-urlparams" => "search_unregistered,only_unregistered"
         %li.nav-item
-          %a#FitMapTrigger.currently-hidden{href: "#"}
+          %a#FitMapTrigger{href: "#", class: (@page_data[:default_location] ? "currently-hidden" : "")}
             Fit map to notifications
   = render partial: "/shared/period_select", locals: { skip_submission: true }
 
@@ -104,7 +117,7 @@
               unknown bike ##{params[:search_bike_id]}
           %em.less-strong
             view notifications
-            = link_to "for all bikes", organization_parking_notifications_path(sortable_search_params.merge(search_bike_id: nil))
+            = link_to "for all bikes", organization_parking_notifications_path(sortable_search_params.merge(search_bike_id: nil)), class: "linkWithSortableSearchParams", "data-urlparams" => "search_bike_id,"
 
     .col-md-6.col-xs-12
       -# Hide the repeat notification interface because the checks don't display on mobile
