--- a/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
+++ b/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
@@ -16,7 +16,7 @@
   #map {
     width: 100%;
     height: 400px;
-    margin-bottom: 4 * $vertical-height;
+    margin-bottom: 12px;
   }
 
   // table rows are rendered when you click on a point on the map too - only show the map link when on the table
@@ -68,6 +68,11 @@
     padding: 0.6rem;
   }
 }
+#parking-notification-nav-links {
+  li {
+    display: inline-block;
+  }
+}
 
 // We don't want to display extended-col-info except on the main table, when the screen is small
 .extended-col-info {
@@ -98,9 +103,7 @@
 
 .map-wrapper {
   position: relative;
-  #map {
-    margin-bottom: 12px;
-  }
+
   #redo-search-in-map {
     border-top-right-radius: 4px;
     background: rgba(black, 0.7);
