--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -15,14 +15,22 @@
     - unless skip_map_cell
       %th.map-cell
     %th
-      = t(".created")
+      - if render_sortable
+        = sortable "created_at"
+      - else
+        = t(".created")
       %small.convertTimezone
     - unless skip_bike
       %th=t(".bike")
     - if render_address
       %th=t(".address")
-    %th Kind
-    %th=t(".by")
+    %th
+      - if render_sortable
+        = sortable "kind"
+      - else
+        Kind
+    %th
+      =t(".by")
     - unless skip_repeat
       %th
         %small=t(".notification_number")
@@ -73,7 +81,11 @@
           %em
             = parking_notification.kind_humanized
         %td.hidden-sm-cells
-          = parking_notification.user&.display_name&.truncate(20)
+          - if render_sortable && parking_notification.user.present?
+            = link_to parking_notification.user&.display_name&.truncate(20), organization_parking_notifications_path(sortable_search_params.merge(user_id: parking_notification.user_id)), class: "linkWithSortableSearchParams", "data-urlparams" => "user_id,#{parking_notification.user_id}"
+          - else
+            = parking_notification.user&.display_name&.truncate(20)
+
         - unless skip_repeat
           %td.small.hidden-sm-cells
             - if parking_notification.repeat_record?
