--- a/app/views/admin/bike_sticker_updates/index.html.haml
+++ b/app/views/admin/bike_sticker_updates/index.html.haml
@@ -39,7 +39,7 @@
           %small
             = link_to "view orgs view", organization_stickers_path(organization_id: current_organization.to_param), class: "less-strong"
 
-  .col-md-6.mt-2
+  .col-md-6.mt-2.text-right
     = form_tag admin_bike_stickers_path, method: :get, class: "form-inline" do
       = hidden_field_tag :sort, sort_column
       = hidden_field_tag :sort_direction, sort_direction
@@ -59,7 +59,9 @@
     %h3 More than 100 matching stickers, just showing the first ones
   = render partial: "table", locals: { bike_stickers: @bike_stickers.limit(100) }
 
-= paginate @bike_sticker_updates, views_prefix: "admin"
+.row
+  .col-sm-6.offset-sm-6
+    = paginate @bike_sticker_updates, views_prefix: "admin"
 
 
 .full-screen-table
@@ -80,7 +82,7 @@
       %th
         = sortable "organization_id", "Update&nbsp;org"
       %th.small
-        = sortable "organization_kind"
+        = sortable "organization_kind", "org&nbsp;kind"
       %th
         = sortable "kind"
       %th
@@ -106,17 +108,25 @@
             - if bike_sticker.organization.present?
               %small= bike_sticker.organization.short_name
           %td
+            - unless bike_sticker_update.update_number == 1
+              %small= bike_sticker_update.update_number
+          %td
             - if bike_sticker_update.bike.present?
-              = organized_bike_text(bike_sticker_update.bike)
+              %small
+                = organized_bike_text(bike_sticker_update.bike)
           %td
             - if bike_sticker_update.organization.present?
               = link_to bike_sticker_update.organization.short_name, admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: bike_sticker_update.organization_id))
           %td
+            - unless bike_sticker_update.no_organization?
+              %small
+                = bike_sticker_update.organization_kind.gsub("_organization", "").humanize
+          %td
             %small
-              = bike_sticker_update.organization_kind
+              = bike_sticker_update.kind.gsub("_claim", "").humanize
           %td
-            = bike_sticker_update.kind.humanize
-          %td
-            = bike_sticker_update.creator_kind.humanize
+            - unless bike_sticker_update.creator_user?
+              %small
+                = bike_sticker_update.creator_kind.gsub("creator_", "").humanize
 
 
