--- a/app/views/admin/bike_sticker_updates/index.html.haml
+++ b/app/views/admin/bike_sticker_updates/index.html.haml
@@ -6,11 +6,24 @@
     %ul
       %li.nav-item
         %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@search_kind != "all" ? "active" : "") }
-          = @search_kind.humanize
+          - if @search_kind == "all"
+            Organization kinds
+          - else
+            = @search_kind.humanize
         .dropdown-menu
           - BikeStickerUpdate.kinds.each do |kind|
             - kind_active = @search_kind == kind
             = link_to kind.humanize, admin_bike_sticker_updates_path(sortable_search_params.merge(search_kind: kind_active ? nil : kind)), class: "dropdown-item #{kind_active ? 'active' : ''}"
+      %li.nav-item
+        %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@search_creator_kind != "all" ? "active" : "") }
+          - if @search_creator_kind == "all"
+            All creators
+          - else
+            = @search_creator_kind.gsub("creator_", "").humanize
+        .dropdown-menu
+          - BikeStickerUpdate.creator_kinds.each do |creator_kind|
+            - kind_active = @search_creator_kind == creator_kind
+            = link_to creator_kind.gsub("creator_", "").humanize, admin_bike_sticker_updates_path(sortable_search_params.merge(search_creator_kind: kind_active ? nil : creator_kind)), class: "dropdown-item #{kind_active ? 'active' : ''}"
       %li.nav-item
         = link_to "graph", admin_bike_sticker_updates_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
 
@@ -27,10 +40,6 @@
       matching sticker updates
       %em
         = humanized_time_range(@time_range)
-      - if sortable_search_params?
-        \-
-        %em
-          = link_to "view all stickers", admin_bike_stickers_path
 
     - if current_organization.present?
       %p
@@ -127,6 +136,9 @@
           %td
             - unless bike_sticker_update.creator_user?
               %small
-                = bike_sticker_update.creator_kind.gsub("creator_", "").humanize
+                - if bike_sticker_update.creator_export?
+                  = link_to "export", organization_export_path(bike_sticker_update.export_id, organization_id: bike_sticker_update.organization_id)
+                - else
+                  = bike_sticker_update.creator_kind.gsub("creator_", "").humanize
 
 
