show which orgs have which stickers

--- a/app/javascript/stylesheets/_table_extensions.scss
+++ b/app/javascript/stylesheets/_table_extensions.scss
@@ -43,6 +43,11 @@
       text-decoration: underline;
     }
   }
+  &.wide-definition tr td {
+    &:last-child {
+      width: 70%; // This is effectively min-width for tables
+    }
+  }
 }
 
 table {
