--- a/app/javascript/stylesheets/_table_extensions.scss
+++ b/app/javascript/stylesheets/_table_extensions.scss
@@ -45,7 +45,7 @@
   }
   &.wide-definition tr td {
     &:last-child {
-      width: 70%; // This is effectively min-width for tables
+      width: 70%;
     }
   }
 }
