--- a/app/views/admin/bike_sticker_updates/index.html.haml
+++ b/app/views/admin/bike_sticker_updates/index.html.haml
@@ -144,7 +144,7 @@
           %td
             - if bike_sticker_update.bike.present?
               %small
-                = organized_bike_text(bike_sticker_update.bike)
+                = link_to organized_bike_text(bike_sticker_update.bike), edit_admin_bike_path(bike_sticker_update.bike_id)
           %td
             - if bike_sticker_update.organization.present?
               = link_to bike_sticker_update.organization.short_name, admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: bike_sticker_update.organization_id))
