--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -13,14 +13,51 @@
   = render partial: "/admin/recoveries/table", locals: { recoveries: @recoveries, skip_bike: true }
 
 .admin-subnav.midpage-subnav
-  .col-12
+  .col-8.col-md-10
     %h1
       Edit Bike
       - if @bike.deleted?
-        %span.text-danger
+        %small.text-danger
           Deleted at:
           %span.convertTime.preciseTime
             = l @bike.deleted_at, format: :convert_time
+  .col-4.col-md-2
+    .text-right
+      - score = @bike.credibility_score
+      .credibility-score{ style: "background: #{credibility_scorer_color(score)};" }
+        .main-crediblity-score-box
+          %a.credibility-title{ href: ".score-details", data: { toggle: "collapse" } }
+            Credibility Score
+          %span.score-number
+            = score
+        .score-details.collapse.text-left
+          %span.details-title
+            Factors in the score:
+          %table.table-list
+            %tbody
+              %tr
+                %td
+                  Creator
+                %td
+                  = CredibilityScorer.user_score(@bike.creator, @bike.creator_id)
+              - if @bike.creation_organization.present?
+                %tr
+                  %td Creating org
+                  %td
+                    = CredibilityScorer.creation_organization_score(@bike)
+              - unless @bike.user == @bike.creator
+                %tr
+                  %td Owner
+                  %td
+                    - if @bike.user.present?
+                      = CredibilityScorer.current_owner_score(@bike.user)
+                    - else
+                      Bike not claimed!
+              - if @bike.ownerships.count > 1
+                %tr
+                  %td Previous Ownerships
+                  %td
+                    = CredibilityScorer.ownerships_score(@bike)
 
 
 
