--- a/app/views/admin/dashboard/credibility_badges.html.haml
+++ b/app/views/admin/dashboard/credibility_badges.html.haml
@@ -10,22 +10,24 @@
 %p
   Badges add or subtract value from that score (max of #{CredibilityScorer::MAX_SCORE}, min of 0)
 
-.full-screen-table
-  %table.table.table-striped.table-bordered.table-sm
-    %thead.thead-light
-      %th
-        Category
-      %th
-        Name
-      %th
-        Value
-    %tbody
-      - CredibilityScorer::BADGES.each do |category, badges|
-        - CredibilityScorer::BADGES[category].each do |key, value|
-          %tr
-            %td
-              = category.to_s.humanize
-            %td
-              = key.to_s.humanize
-            %td
-              = value
+.row
+  .col-md-8.offset-md-2
+    %table.table.table-striped.table-bordered.table-sm
+      %thead.thead-light
+        %th.small
+          Category
+        %th
+          Name
+        %th
+          Value
+      %tbody
+        - CredibilityScorer::BADGES.each do |category, badges|
+          - CredibilityScorer::BADGES[category].each do |key, value|
+            %tr
+              %td
+                %small.less-strong
+                  = category.to_s.humanize
+              %td
+                = key.to_s.humanize
+              %td
+                = value
