--- a/app/javascript/stylesheets/admin/_bikes.scss
+++ b/app/javascript/stylesheets/admin/_bikes.scss
@@ -53,7 +53,7 @@
     background: #fff;
     padding: 0.2rem 0 0;
     .details-title {
-      padding: 0.5rem 0.1rem;
+      padding: 0.5rem 0.1rem 0.25rem;
       display: block;
     }
     .table-list {
