--- a/app/views/admin/bike_sticker_updates/index.html.haml
+++ b/app/views/admin/bike_sticker_updates/index.html.haml
@@ -27,6 +27,8 @@
       %li.nav-item
         = link_to "graph", admin_bike_sticker_updates_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
 
+  = render partial: "/shared/admin_current_header", locals: { viewing: "Sticker updates" }
+
 - if @render_chart
   = column_chart time_range_counts(collection: matching_bike_sticker_updates), stacked: true, thousands: ",", defer: true
 
@@ -37,20 +39,20 @@
           %tbody
             - matching_sticker_per_org_id = matching_bike_sticker_updates.distinct.pluck(:organization_id).map { |id| [id, matching_bike_sticker_updates.where(organization_id: id).count] }
             - matching_sticker_per_org_id.sort_by { |id, number| number }.each do |id, number|
-              - organization = Organization.find(id) if id.present?
+              - organization = Organization.unscoped.find_by_id(id) if id.present?
               %tr
                 %td
                   - if organization.present?
-                    = link_to organization.short_name, admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: id))
+                    = link_to organization.short_name, admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: id)), class: (organization.deleted? ? "text-danger" : "")
                   - else
-                    = link_to "no organization", admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: "none")), class: ""
+                    = link_to "no organization", admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: "none")), class: "gray-link"
                 %td
                   = number_with_delimiter(number)
 
 .mt-2
   = render partial: "/shared/period_select"
 
-.row.mt-4
+.row.mt-4.mb-2
   .col-md-6
     %p
       = number_with_delimiter(@bike_sticker_updates.total_count)
@@ -58,19 +60,7 @@
       %em
         = humanized_time_range(@time_range)
 
-    - if current_organization.present?
-      %p
-        %strong
-          Viewing #{link_to current_organization.name, admin_organization_path(current_organization)} Sticker updates
-
-    - elsif params[:organization_id].present?
-      %p
-        %strong
-          Viewing Sticker updates
-          %em
-            with no organization
-
-  .col-md-6.mt-2.text-right
+  .col-md-6.text-right
     = form_tag admin_bike_stickers_path, method: :get, class: "form-inline" do
       = hidden_field_tag :sort, sort_column
       = hidden_field_tag :sort_direction, sort_direction
@@ -107,7 +97,7 @@
       %th.small
         sticker&nbsp;org
       %th.small
-        = sortable "update_number", "#"
+        = sortable "update_number", "repeat#"
       %th
         = sortable "bike_id"
       %th
