--- a/app/views/admin/parking_notifications/index.html.haml
+++ b/app/views/admin/parking_notifications/index.html.haml
@@ -18,6 +18,7 @@
       %li.nav-item
         = link_to "graph", admin_parking_notifications_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
 
+  = render partial: "/shared/admin_current_header", locals: { viewing: "Parking notifications" }
 
 .row.mt-4.mb-4
   .col-sm-6
@@ -39,13 +40,13 @@
           %tbody
             - matching_parking_notification_per_org_id = matching_parking_notifications.distinct.pluck(:organization_id).map { |id| [id, matching_parking_notifications.where(organization_id: id).count] }
             - matching_parking_notification_per_org_id.sort_by { |id, number| number }.each do |id, number|
-              - organization = Organization.find(id) if id.present?
+              - organization = Organization.unscoped.find_by_id(id) if id.present?
               %tr
                 %td
                   - if organization.present?
-                    = link_to organization.short_name, admin_parking_notifications_path(sortable_search_params.merge(organization_id: id))
+                    = link_to organization.short_name, admin_parking_notifications_path(sortable_search_params.merge(organization_id: id)), class: (organization.deleted? ? "text-danger" : "")
                   - else
-                    = link_to "no organization", admin_parking_notifications_path(sortable_search_params.merge(organization_id: "none")), class: ""
+                    = link_to "no organization", admin_parking_notifications_path(sortable_search_params.merge(organization_id: "none")), class: "gray-link"
                 %td
                   = number_with_delimiter(number)
 
